--- a/test/SpecRunner.html
+++ b/test/SpecRunner.html
@@ -35,12 +35,12 @@
 
   <script src="spec/AppSpec.js"></script>
   <script src="spec/AppViewSpec.js"></script>
- <!--  <script src="spec/LibraryEntryViewSpec.js"></script>
-  <script src="spec/LibraryViewSpec.js"></script> -->
-<!--   <script src="spec/PlayerViewSpec.js"></script>
+  <script src="spec/LibraryEntryViewSpec.js"></script>
+  <script src="spec/LibraryViewSpec.js"></script>
+  <script src="spec/PlayerViewSpec.js"></script>
   <script src="spec/SongQueueSpec.js"></script>
-  <script src="spec/SongQueueViewSpec.js"></script> -->
-<!--   <script src="spec/SongSpec.js"></script> -->
+  <script src="spec/SongQueueViewSpec.js"></script>
+  <script src="spec/SongSpec.js"></script>
 
 </head>
 <body>
